# CenterNet-trt

./: CMakeLists.txt  README.md  ctdet_infer.cpp  decode.cu  decode.h  logging.h  pose_infer.cpp
dcnv2_trt/: CMakeLists.txt  DCNv2Plugin.cpp  DCNv2Plugin.h  dcn_v2_im2col_cuda.cu
scripts/: DCNv2.py  export_onnx.py  modify_dcn_plugin.py
